fix cheked domingo por defecto en dias libres y siempre visible los botones del menu

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -83,7 +83,7 @@ body.loading:before{
 }
 @media screen and (min-width:768px){
 	.menu-fixed{
-		display:none;
+		//display:none;
 	}
 
 }
